@@ -770,12 +770,29 @@ void __fastcall TfrmMain::mnuFilesOptimizeFor(TObject *Sender, int iCount)
 
 			RunPlugin((unsigned int) iCount, "DeflOpt", (sPluginsDirectory + "deflopt.exe /a /b /s " + sFlags + "\"%TMPINPUTFILE%\"").c_str(), sPluginsDirectory, sInputFile, "", 0, 0);
 		}
-		// HTML: tidy-html5
+		// HTML: tidy-html5, Leanify
 		if (PosEx(sExtensionByContent, KS_EXTENSION_HTML) > 0)
 		{
 			if (gudtOptions.bHTMLEnableTidy)
 			{
 				RunPlugin((unsigned int) iCount, "tidy-html5", (sPluginsDirectory + "tidy.exe -config tidy.config -quiet -output \"%TMPOUTPUTFILE%\" \"%INPUTFILE%\" ").c_str(), sPluginsDirectory, sInputFile, "", 0, 0);
+			}
+			
+			if (gudtOptions.bXMLEnableLeanify)
+			{
+				sFlags = "";
+				//iLevel = min(gudtOptions.iLevel * 8 / 9, 8) + 1;
+				//Overwrite Leanify iterations
+				if (gudtOptions.iLeanifyIterations != -1)
+				{
+					iLevel = gudtOptions.iLeanifyIterations;
+				}
+				else
+				{
+					iLevel = ((gudtOptions.iLevel * gudtOptions.iLevel * gudtOptions.iLevel) / 25) + 1; //1, 1, 2, 3, 6, 9, 14, 21, 30
+				}
+				sFlags += "-i " + (String) iLevel + " ";
+				RunPlugin((unsigned int) iCount, "Leanify", (sPluginsDirectory + "leanify.exe -q " + sFlags + "\"%TMPINPUTFILE%\"").c_str(), sPluginsDirectory, sInputFile, "", 0, 0);
 			}
 		}
 		// ICO: ImageMagick, Leanify
